# DonerSerializer

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTIONS.md  LICENSE  README.md  appveyor.yml  generate_MSYS_clang.sh  generate_MSYS_gcc.sh  project_generation_scripts.py
DonerSerializer/: CMakeLists.txt
DonerSerializer/include/donerserializer/: DonerDeserialize.h  DonerReflection.h  DonerSerialize.h  DonerSerializer.h  ISerializable.h
DonerSerializer/tests/source/common/: CBasicTypesTest.cpp  CComplexTypesTest.cpp  CStdContainersTest.cpp
scripts/: travis.sh
